# advent_of_code_2023

./: .pre-commit-config.yaml  README.md  main  main.py  pyproject.toml
src/: tailrec.py  util.py
src/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day22.py  day23.py  day24.py
tests/: test_tailrec.py  test_util.py
