[tool.poetry]
name = "advent_of_code_2023"
version = "1.0"
description = "Advent of Code 2023 Solutions"
authors = ["Matt Hawthorn"]
readme = "README.md"
packages = [{include = "*", from = "src"}]
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.13"
returns = "*"
"bourbaki.application" = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
ipython = "^8.18"
mypy = "^1.7"
mypy-extensions = "*"
pytest = "*"
pytest-cov = "*"
